Avoid frequency text from wrapping.

--- a/app/assets/stylesheets/demo/product.less
+++ b/app/assets/stylesheets/demo/product.less
@@ -87,7 +87,7 @@ body.product {
                 &:last-child { padding-right: 0; }
                 label {
                     .text {
-                        text-align: left;
+                        text-align: left; white-space: nowrap;
                         .pacifico; font-size: 2.8em; color: @white; opacity: 0.5;
                         .check {
                             float: left; width: 35px; height: 40px; margin: 20px 15px 0 0;
